node-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-test
  labels:
    app: node-test
    service: node-test
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: node-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-test-v1
  labels:
    app: node-test
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-test
      version: v1
  template:
    metadata:
      labels:
        app: node-test
        version: v1
    spec:
    serviceAccountName: node-test
      containers:
      - name: node-test
        image: docker.io/fredly11/node-restart:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        securityContext:
          runAsUser: 1000
